--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^3.0.6",
+    "@devexpress/dx-react-chart-material-ui": "^3.0.6",
+    "@devexpress/dx-react-core": "^3.0.6",
+    "@devexpress/dx-react-grid": "^3.0.6",
+    "@devexpress/dx-react-grid-material-ui": "^3.0.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
